chưc năng điểm danh bằng khuôn mặt, location